[tool.poetry]
name = "binance-balance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
psycopg = "^3.1.18"
pyyaml = "^6.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
mypy = "^1.9.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
